# pi-skills

./: README.md
digikey-search/: SKILL.md
digikey-search/scripts/: download_datasheet.py
image-to-equation/: SKILL.md
kicad-cli/: SKILL.md
kicad-cli/references/: pcb-export.md
kicad-sch-analyzer/: SKILL.md
kicad-sch-analyzer/script/: README.md  pyproject.toml
kicad-sch-analyzer/script/src/kicad_sch_analyzer/: __init__.py  __main__.py
kicad-sch-analyzer/script/src/kicad_sch_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
kicad-schematics-review/: SKILL.md
kicad-schematics-review/design-checklists/Analog/: checklist_adc_reviewed.md  checklist_audio_amp_reviewed.md  checklist_dac_reviewed.md  checklist_inst_amp_reviewed.md  checklist_opamp_reviewed.md
kicad-schematics-review/design-checklists/Connectivity/: checklist_bus_bridge_reviewed.md  checklist_io_expander_reviewed.md  checklist_rf_module_reviewed.md  checklist_rf_transceiver_reviewed.md
kicad-schematics-review/design-checklists/Control Unit/: checklist_mcu_reviewed.md  checklist_mpu_reviewed.md
kicad-schematics-review/design-checklists/Interface/: checklist_analog_switch_mux_reviewed.md  checklist_electromechanical_io_reviewed.md  checklist_level_shifter_reviewed.md  checklist_logic_gate_reviewed.md
pdf/: SKILL.md
pdf-to-markdown/: SKILL.md
pdf-to-markdown/scripts/: markdown_cleanup.py  pdf_to_markdown.py
pdf-utils/: SKILL.md
product-catalog-downloader/: SKILL.md
text-to-markdown/: SKILL.md
(+20 files in other folders)
